ncaa mens court complete

--- a/index.css
+++ b/index.css
@@ -5,7 +5,8 @@ body, html {
 .container {
 	height: 100%;
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-between;
+	margin: 200px 200px auto;
 }
