--- a/index.css
+++ b/index.css
@@ -5,8 +5,7 @@ body, html {
 .container {
 	height: 100%;
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	align-items: center;
-	justify-content: space-between;
-	margin: 200px 200px auto;
+	justify-content: center;
 }
