--- a/index.css
+++ b/index.css
@@ -1,8 +1,45 @@
 body, html {
 	height: 100%;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
 }
 
 .container {
+	/*height: 75%;*/
+	/*margin: 10px;*/
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	border: solid 3px black;
+}
+
+.container2 {
+	/*margin: 10px;*/
+	padding: 10px;
+	border: solid black 3px;
+	margin: 20px;
+	height: 500px;
+	width: 400px;
+	display: flex;
+	flex-direction: column;
+	align-items: left;
+	justify-content: top;
+}
+
+.player-container {
+	/*height: 100%;*/
+	/*background: #DCDCDC;*/
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+	/*padding: 5px 5px 5px 5px;*/
+}
+
+.shot-container {
 	height: 100%;
 	display: flex;
 	flex-direction: column;
@@ -10,6 +47,32 @@ body, html {
 	justify-content: center;
 }
 
+.court-svg {
+	/*background: #DCDCDC;*/
+	/*border: solid 3px black;*/
+}
+
 .shotchart-controls {
 	margin: 5px;
+	/*background-color: gray;*/
+}
+
+.player-card {
+	width: 100px;
+	border: solid 3px black;
+	padding: 10px;
+	margin: 20px;
+
+}
+
+.player-card-clicked {
+	width: 100px;
+	border: solid 3px black;
+	padding: 10px;
+	margin: 20px;
+	background-color: yellow;
+}
+
+.player-card:hover {
+	background-color: #DCDCDC;
 }
