--- a/index.css
+++ b/index.css
@@ -1,63 +1,60 @@
 body, html {
 	height: 100%;
+	width: 100%;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	justify-content: center;
 }
 
-.container {
-	/*height: 75%;*/
-	/*margin: 10px;*/
+.left-container {
+	height: 100%;
+	width: 50%;
 	display: flex;
 	flex-direction: column;
-	align-items: center;
 	justify-content: center;
-	border: solid 3px black;
+	align-items: center;
 }
 
-.container2 {
-	/*margin: 10px;*/
-	padding: 10px;
-	border: solid black 3px;
-	margin: 20px;
-	height: 500px;
-	width: 400px;
+.right-container {
+	height: 100%;
+	width: 50%;
 	display: flex;
 	flex-direction: column;
-	align-items: left;
-	justify-content: top;
+	justify-content: center;
+	align-items: center;
 }
 
-.player-container {
-	/*height: 100%;*/
-	/*background: #DCDCDC;*/
+.player-buttons {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-between;
-	/*padding: 5px 5px 5px 5px;*/
+	width: 90%;
+	margin: 10px;
 }
 
-.shot-container {
-	height: 100%;
+.shot-buttons {
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	align-items: center;
 	justify-content: center;
+	margin: 10px;
 }
 
-.court-svg {
-	/*background: #DCDCDC;*/
-	/*border: solid 3px black;*/
+.button {
+	width: 100px;
+	height: 50px;
+	margin: 10px;
 }
 
-.shotchart-controls {
-	margin: 5px;
-	/*background-color: gray;*/
+.button:hover {
+	background-color: darkgrey;
 }
 
 .player-card {
+	text-align: center;
+	font-size: 20px;
 	width: 100px;
 	border: solid 3px black;
 	padding: 10px;
@@ -66,6 +63,8 @@ body, html {
 }
 
 .player-card-clicked {
+	text-align: center;
+	font-size: 20px;
 	width: 100px;
 	border: solid 3px black;
 	padding: 10px;
@@ -75,4 +74,19 @@ body, html {
 
 .player-card:hover {
 	background-color: #DCDCDC;
+}
+
+.play-by-play {
+	/*border: solid black 3px;*/
+	background-color: #DCDCDC;
+	width: 50%;
+	/*height: 50%;*/
+}
+
+.play-entry {
+	width: 100%;
+	height: 40px;
+	margin: 5px;
+	padding-left: 20px;
+	background-color: white;
 }
